@@ -1,3 +1,8 @@
+Apr 06 2009:
+ * Implemented color support
+ * Improved snake rendering
+     -- Andreas Krennmair
+
 Apr 05 2009:
  * Replaced the autoconf/automake configure script by a simple Makefile
  * Cleaned up and improved code
